<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/bio_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bio_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_username"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bio_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_password"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bio_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_name"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bio_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_email"
        android:layout_marginTop="16dp"
        android:hint="@string/contact"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bio_nin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_contact"
        android:layout_marginTop="16dp"
        android:hint="@string/nin"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bio_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@id/bio_nin"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="276dp"
        android:layout_height="200dp"
        android:layout_below="@id/bio_update_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/landingimage" />



    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"/>
</RelativeLayout>
